# grtel

./: .gitignore  README.md  pyproject.toml
src/1. dividing_stocks/: 1. divide_by_sector.ipynb  2. divide_by_clusters.ipynb  divide_by_clusters.ipynb  divide_by_sector.ipynb
src/2. samples_and_labels/: 2. get_samples_and_labels_cluster.ipynb  get_samples_and_labels_sector.ipynb
src/3. grtel_analysis/: 1. grtel_base.ipynb  2. grtel_sectors.ipynb  3. grtel_clusters.ipynb  grtel_base.ipynb
src/data/: labels_cluster.csv  labels_sector.csv  stocks_by_cluster.csv  stocks_by_sector.csv
src/dividing_stocks/: divide_by_clusters.ipynb
src/grtel/: classification.py  decomposition.py  graphs.py  indicators.py  portfolio_cuts.py  utils.py
src/grtel_analysis/: grtel_base.ipynb
src/samples_and_labels/: get_samples_and_labels_cluster.ipynb  get_samples_and_labels_sector.ipynb
