[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
known_first_party = "trading"
profile = "black"

[tool.poetry]
authors = ["Ata Yardimci <atayardimci@outlook.com>"]
description = "Trading Practice"
name = "trading"
version = "1.0.1"

[tool.poetry.dependencies]
python = "^3.8.12"
arrow = ">=1.3.0"
beartype = ">=0.16.4"
hottbox = "^0.3.2"
matplotlib = "^3.7.5"
networkx = "^3.0"
openpyxl = ">=3.0.9" # Required for pandas read_excel and ExcelWriter
pandas = ">=1.3.1"
pydantic = "^1.9.0"
scikit-learn = "^1.3.2"
yfinance = "^0.2.36"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
